--- a/HTML-GIT-CSS-Code-Drills/challenge-prompt 2.html
+++ b/HTML-GIT-CSS-Code-Drills/challenge-prompt 2.html
@@ -29,15 +29,15 @@
     <!-- Create an image element that displays the  `basket-kitty.jpg` image -->
     <img src="images/cat/kitty/kitten/basket-kitty.jpg" alt="basket-kitty">
     <!-- Create an image element that displays the `dog-glasses-suit.jpg` image -->
-
+    <img src="images/dog/dog-glasses-suit.jpg" alt="dog-glasses-suit">
     <!-- Create an image element that displays the `dog/puppy/basket-puppies.jpg` image -->
-
+    <img src="images/dog/puppy/basket-puppies.jpg" alt="basket-puppies">
     <!-- Create an image element that displays the `fatbirdy.jpg` image -->
-
+    <img src="images/fatbirdy.jpg" alt="fatbirdy">
     <!-- Create an image element that displays the `bird/cool-bird.jpg` image -->
-
+    <img src="images/bird/cool-bird.jpg" alt="cool-bird">
     <!-- Create an image element that displays the `squirrel-sandbox.jpg` image -->
-
+    <img src="images/squirrel-sandbox.jpg" alt="squirrel-sandbox">
 </body>
 
 </html>
