Added double border to img elements.

--- a/HTML-GIT-CSS-Code-Drills/08-core-css-float-and-file-path/challenge-prompt.html
+++ b/HTML-GIT-CSS-Code-Drills/08-core-css-float-and-file-path/challenge-prompt.html
@@ -9,7 +9,12 @@
     img {
         width: 150px;
         /* add a border */
+        border-style: double;
+    }
+    p {
 
+    }
+    div {
 
     }
 
