--- a/HTML-GIT-CSS-Code-Drills/09-core-css-float/challenge-prompt.html
+++ b/HTML-GIT-CSS-Code-Drills/09-core-css-float/challenge-prompt.html
@@ -47,19 +47,19 @@
 <body>
 
     <!-- Add classes and IDs to the divs -->
-    <div>
+    <div id="red-textbox">
         <p>I'm a red text box</p>
     </div>
 
-    <div>
+    <div id="yellow-textbox">
         <p>I'm a yellow text box</p>
     </div>
 
-    <div>
+    <div class="blue-textbox">
         <p>I'm a blue text box</p>
     </div>
 
-    <div>
+    <div class="blue-textbox">
         <p>I'm a blue text box</p>
     </div>
 
