Changed background color to match text within.

--- a/HTML-GIT-CSS-Code-Drills/09-core-css-float/challenge-prompt.html
+++ b/HTML-GIT-CSS-Code-Drills/09-core-css-float/challenge-prompt.html
@@ -14,7 +14,7 @@
         width: 300px;
         margin: 20px;
 
-        background-color: black;
+        background-color: red;
         /* Float this element to the left */
 
     }
@@ -24,7 +24,7 @@
         width: 300px;
         margin: 20px;
 
-        background-color: purple;
+        background-color: yellow;
 
         /* Float this element to the right */
 
@@ -35,7 +35,7 @@
         width: 300px;
         margin: 20px;
 
-        background-color: green;
+        background-color: blue;
         
         /* Clear the float for this element so it appears below the red and yellow boxes */
 
