Floated left, right, and clear (to bottom).

--- a/HTML-GIT-CSS-Code-Drills/09-core-css-float/challenge-prompt.html
+++ b/HTML-GIT-CSS-Code-Drills/09-core-css-float/challenge-prompt.html
@@ -13,7 +13,7 @@
         padding: 20px;
         width: 300px;
         margin: 20px;
-
+        float:left;
         background-color: red;
         /* Float this element to the left */
 
@@ -23,7 +23,7 @@
         padding: 20px;
         width: 300px;
         margin: 20px;
-
+        float: right;
         background-color: yellow;
 
         /* Float this element to the right */
@@ -34,7 +34,7 @@
         padding: 20px;
         width: 300px;
         margin: 20px;
-
+        clear: both;
         background-color: blue;
         
         /* Clear the float for this element so it appears below the red and yellow boxes */
