Changed float settings to determine how layout would be effected.

--- a/HTML-GIT-CSS-Code-Drills/09-core-css-float/challenge-prompt.html
+++ b/HTML-GIT-CSS-Code-Drills/09-core-css-float/challenge-prompt.html
@@ -13,7 +13,7 @@
         padding: 20px;
         width: 300px;
         margin: 20px;
-        float:left;
+        float: right;
         background-color: red;
         /* Float this element to the left */
 
@@ -34,7 +34,8 @@
         padding: 20px;
         width: 300px;
         margin: 20px;
-        clear: both;
+        float: left;
+        /* clear: both; */
         background-color: blue;
         
         /* Clear the float for this element so it appears below the red and yellow boxes */
