--- a/HTML-GIT-CSS-Code-Drills/10-core-css-float-wrappers/challenge-prompt.html
+++ b/HTML-GIT-CSS-Code-Drills/10-core-css-float-wrappers/challenge-prompt.html
@@ -12,6 +12,7 @@
     div {
         width: 40%;
         padding: 5px;
+        border-style: solid;
         /* Add a border to every `<div>` element */
 
     }
