Floated img elements left so text can wrap around on right.

--- a/HTML-GIT-CSS-Code-Drills/10-core-css-float-wrappers/challenge-prompt.html
+++ b/HTML-GIT-CSS-Code-Drills/10-core-css-float-wrappers/challenge-prompt.html
@@ -19,6 +19,7 @@
 
     img {
         padding: 5px;
+        float: left;
         /* Float the image so that it's in the top left of the box and the text flows around it */
 
 
