Created new div selectors to float divs left and right respectively.

--- a/HTML-GIT-CSS-Code-Drills/10-core-css-float-wrappers/challenge-prompt.html
+++ b/HTML-GIT-CSS-Code-Drills/10-core-css-float-wrappers/challenge-prompt.html
@@ -24,7 +24,12 @@
 
 
     }
-
+    #wrapper-right {
+        float:right;
+    }
+    #wrapper-left {
+        float:left;
+    }
     /* Add selectors to float the two divs to different sides */
 
 
