Added new section below previous section and assigned unique class and id.

--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/04-rock-css-anchors-and-id/index.html
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/04-rock-css-anchors-and-id/index.html
@@ -18,6 +18,11 @@
       <div class="box-4"></div>
   </section>
 
+  <section class="secondary" id="sec-two-id">
+
+
+  </section>
+
 </body>
 
 </html>
