Added anchor tag inside first section with scroll down enclosed.

--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/04-rock-css-anchors-and-id/index.html
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/04-rock-css-anchors-and-id/index.html
@@ -12,6 +12,7 @@
 <body>
 
   <section class="main">
+      <a class="scroll">Scroll Down</a>
       <div class="box-1"></div>
       <div class="box-2"></div>
       <div class="box-3"></div>
@@ -19,7 +20,6 @@
   </section>
 
   <section class="secondary" id="sec-two-id">
-
 
   </section>
 
