added href to anchor tag linking to second section.

--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/04-rock-css-anchors-and-id/index.html
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/04-rock-css-anchors-and-id/index.html
@@ -18,7 +18,7 @@
     <div class="box-3"></div>
     <div class="box-4"></div>
       
-      <a class="scroll">Scroll Down</a>
+      <a class="scroll" href="#sec-two-id">Scroll Down</a>
   </section>
 
   <section class="secondary" id="sec-two-id">
