--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/06-core-bootstrap-basics/index.html
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/06-core-bootstrap-basics/index.html
@@ -60,6 +60,13 @@
                     </div>
 
                     <div class="m-3 d-flex justify-content-center">
+                        
+                        <div class="row">
+                            <div class="col"><button type="button" class="btn btn-primary">Primary</button></div>
+                            <div class="col"><button type="button" class="btn btn-success">Success</button></div>
+                            <div class="col"><button type="button" class="btn btn-danger">Danger</button></div>
+                            <div class="col"><button type="button" class="btn btn-warning">Warning</button></div>
+                        </div>
 
                     </div>
 
