--- a/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/07-proj-bootstrap/index.html
+++ b/CSS-Bootstrap-Code-Drills/code-drills/00-required-code-drills/07-proj-bootstrap/index.html
@@ -89,7 +89,7 @@
 
 
             <div class="container">
-                <div class="row mt-4 mb-4 pt-4 pb-4">
+                <div class="row mt-4 mb-4 pt-4 pb-4 mr-3 ml-3">
                     
                     <div class="col-md-4">
 
