--- a/JAVASCRIPT-Code-Drills/code-drills/00-required-code-drills/01-core-js-variables/index.html
+++ b/JAVASCRIPT-Code-Drills/code-drills/00-required-code-drills/01-core-js-variables/index.html
@@ -9,6 +9,12 @@
 <body>
   <h1>Practice with Variables</h1>
 
-  <script src="challenge-prompt.js"></script>
+  <script src="challenge-prompt.js">
+
+    var subject = "Programmers";
+    var firstName = "ada";
+
+  
+  </script>
 </body>
 </html>
