Added key: value pairs to sanFran object using dot notation on sanFran with the new key and assigning new value.

--- a/JAVASCRIPT-Code-Drills/code-drills/00-required-code-drills/14-core-js-bracket-notation/challenge-prompt.html
+++ b/JAVASCRIPT-Code-Drills/code-drills/00-required-code-drills/14-core-js-bracket-notation/challenge-prompt.html
@@ -37,6 +37,10 @@
   // }
 
   var sanFran = {};
+  sanFran.westCoast = true;
+  sanFran.hasMultipleBridges = true;
+  sanFran.knownForPizza = false;
+  
 
 
 console.log(sanFran);
