Completed coding-drills for module 08

--- a/AJAX-Drills/00-required-code-drills/09-core-yelp-api/solved/solution.html
+++ b/AJAX-Drills/00-required-code-drills/09-core-yelp-api/solved/solution.html
@@ -94,7 +94,7 @@
           method: "GET",
                 // This solution does not include an API key. You will have to fill in the API key yourself
           headers: {
-            authorization: "Bearer ???????????????"
+            authorization: "Bearer KQWhz9_RIh91MBjFk0ieWlqw9hOdrfJPFDZsGeAQcd3xPc9KV57sSDZBxftr2vfBqFjgcq2nBuas8lZ8wVDWHbtYQQFLpneMHocF27Tk_43hgOjMY-fT2hnGt1P9XHYx"
           }
         }).then(function (response) {
           console.log(response)
