Completed ccode drills for module 08.

--- a/08-project-1-drills/code-drills/01-optional-code-drills/01-algo-array-sums/prompt.html
+++ b/08-project-1-drills/code-drills/01-optional-code-drills/01-algo-array-sums/prompt.html
@@ -16,6 +16,9 @@ var target = 22;
 function getSum(arr, trg) {
 
 //==================== YOUR WORK HERE ===================
+for (var i = 0; i < array.length; i++) {
+  if ()
+}
 
 
 
